# shopper

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
issues/: cross-origin-iframe-popups.md
shopper/: __init__.py  agent.py  cli.py
shopper_google/: __init__.py  actions.py  browser.py  cli.py  config.py  prompts.py  runner.py
